--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="images/logo.png" alt="logo cửa hàng sách">
+            <img src="logo.png" alt="logo cửa hàng sách">
         </div>
         <nav>
             <ul>
@@ -28,21 +28,21 @@
             <div class="products">
                 <!--Section 1-->
                 <div class="product">
-                    <img src="images/sach1.jpg" alt="sách số 1">
+                    <img src="sach1.jpg" alt="sách số 1">
                     <h3>Sách wibu</h3>
                     <p>Giá bán: 150000 VNĐ</p>
                     <button>Mua ngay</button>
                 </div>
                 <!--Section 2-->
                 <div class="product">
-                    <img src="images/sach2.jpg" alt="sách số 2">
+                    <img src="sach2.jpg" alt="sách số 2">
                     <h3>Sách phật</h3>
                     <p>Giá bán: 100000 VNĐ</p>
                     <button>Mua ngay</button>
                 </div>
                 <!--Section 3-->
                 <div class="product">
-                    <img src="images/sach3.jpg" alt="sách số 3">
+                    <img src="sach3.jpg" alt="sách số 3">
                     <h3>Sách thế giới</h3>
                     <p>Giá bán: 250000 VNĐ</p>
                     <button>Mua ngay</button>
@@ -54,21 +54,21 @@
                 <div class="products">
                     <!--Section 4-->
                     <div class="product">
-                        <img src="images/sach4.jpg" alt="sách số 4">
+                        <img src="sach4.jpg" alt="sách số 4">
                         <h3>Sách số 4</h3>
                         <p>Giá bán: 180000 VNĐ</p>
                         <button>Mua ngay</button>
                     </div>
                     <!--Section 5-->
                     <div class="product">
-                        <img src="images/sach5.jpg" alt="đò chơi">
+                        <img src="sach5.jpg" alt="đò chơi">
                         <h3>Bộ đồ chơi lego</h3>
                         <p>Giá bán: 666666 VNĐ</p>
                         <button>Mua ngay</button>
                     </div>
                     <!--Section 6-->
                     <div class="product">
-                        <img src="images/sach6.jpg" alt="sách số 6">
+                        <img src="sach6.jpg" alt="sách số 6">
                         <h3>Sách số 6</h3>
                         <p>Giá bán: 222000 VNĐ</p>
                         <button>Mua ngay</button>
@@ -80,21 +80,21 @@
                 <div class="products">
                     <!--Section 7-->
                     <div class="product">
-                        <img src="images/sach7.jpg" alt="sách số 7">
+                        <img src="sach7.jpg" alt="sách số 7">
                         <h3>Sách số 7</h3>
                         <p>Giá bán: 757575 VNĐ</p>
                         <button>Mua ngay</button>
                     </div>
                     <!--Section 8-->
                     <div class="product">
-                        <img src="images/sach8.jpg" alt="sách số 8">
+                        <img src="sach8.jpg" alt="sách số 8">
                         <h3>Sách số 8</h3>
                         <p>Giá bán: 696969 VNĐ</p>
                         <button>Mua ngay</button>
                     </div>
                     <!--Section 9-->
                     <div class="product">
-                        <img src="images/sach9.jpg" alt="sách số 9">
+                        <img src="sach9.jpg" alt="sách số 9">
                         <h3>Sách số 9</h3>
                         <p>Giá bán: 333333 VNĐ</p>
                         <button>Mua ngay</button>
